overflow fixed on body

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body{
     color: white !important;
     font-family: 'Prompt' !important;
     background-repeat: no-repeat;
+    overflow-x: hidden;
 }
 /* typo */
 h1{
